--- a/src/components/YearSlider.css
+++ b/src/components/YearSlider.css
@@ -24,13 +24,13 @@
   }
   .horizontal-slider .example-track {
     position: absolute;
-    top: 19px;
+    top: 4.5px;
     height: 15px;
     background: #f0f4ff;
     border-radius: 3px;
   }
   .horizontal-slider .example-thumb {
-    top: 12px;
+    top: -4px;
     width: 10px;
     outline: none;
     height: 10px;
@@ -67,13 +67,13 @@
   .slider-year-info-box-element1 {
     font-weight: bold;
     color: #ffffff;
-    font-size: 32px;
+    font-size: 26px;
   }
 
 
   .slider-year-info-box-element2 {
     padding: 5px 15px;
-    font-size: 24px;
+    font-size: 20px;
     color: #ffffff;
     border: 1px solid white;
     background: #374151;
